hath: chore: 更新镜像构建流程